--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -3,16 +3,18 @@
 .tabs {
   display: flex;
   flex-direction: column;
+  width: fit-content; /* This will make the container adjust to the content width */
   align-items: flex-start; /* Align tabs to the left */
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-right: 2rem;
 }
 
 .tabs a {
   text-decoration: none;
   color: #333;
-  padding: 10px 20px;
-  margin-bottom: 10px; /* Add some spacing between tabs */
+  padding: 10px 0px;
   border-radius: 5px;
-  background-color: #f5f5f5;
   transition: background-color 0.3s ease;
 }
 
