--- a/src/styles/GridView.module.css
+++ b/src/styles/GridView.module.css
@@ -1,18 +1,28 @@
 .gridContainer {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
-  max-width: 800px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
+  grid-gap: .5rem;
+  max-width: 1600px;
   width: 100%;
 }
 
+.gridItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  padding: .5rem;
+}
+
 .gridImage {
-  width: 100%;
-  max-width: 200px;
-  height: auto;
+  max-width: 80%;
+  max-height: 80%;
   object-fit: contain;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+  position: absolute;
 }
 
 .gridToggleIcon {
@@ -22,7 +32,7 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-left: auto; /* Add this line */
+  margin-left: auto;
 }
 
 .gridToggleIcon:hover {
