--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -1,6 +1,5 @@
 .homepageContainer {
   width: 100%;
-  height: calc(100vh - 64px); /* Adjust the height as needed */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +7,7 @@
 
 .homepageImage {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 80vh;
   object-fit: contain;
 }
 
