--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -9,7 +9,7 @@
 .title {
   margin: 0;
   color: rgb(135, 6, 6);
-  font-size: 24px;
+  font-size: 18px;
   text-decoration: none;
   padding-top: .5rem;
 }
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  width: 100%;
+  width: 80vw;
   margin-top: 0; /* Remove the top margin */
 }
 
