--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -9,13 +9,13 @@
   padding-bottom: 2rem;
   padding-right: 2rem;
   font-family: 'Rosarivo', serif;
+  font-size: 14px;
 }
 
 .tabs a {
   text-decoration: none;
   color: #333;
   padding: 10px 0px;
-  border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
@@ -26,7 +26,6 @@
 .verticalTab {
   display: block;
   margin-bottom: 10px;
-  /* No additional styles needed for vertical tabs */
 }
 
 /* FOR MOBILE MENU */
