--- a/src/styles/AboutPage.module.css
+++ b/src/styles/AboutPage.module.css
@@ -18,6 +18,11 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.pageTitle {
+  font-size: 26px; /* Adjust this value as needed */
+  margin-bottom: 20px;
+}
+
 .aboutText {
   flex: 1;
   max-width: 800px;
@@ -33,7 +38,7 @@
 }
 
 .aboutText h3 {
-  font-size: 24px;
+  font-size: 22px;
   margin-bottom: 10px;
 }
 
